Added id to loader

--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -42,6 +42,7 @@
                 <com.wang.avi.AVLoadingIndicatorView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/loader"
                     app:indicatorName="BallClipRotatePulseIndicator"
                     android:layout_gravity="center"
                     app:indicatorColor="#0277BD"
